fonction vectoriserStation et convertirVersRDD